@@ -2,6 +2,9 @@ software-center (2.1.22.5) UNRELEASED; urgency=low
 
   * softwarecenter/backend/restfulclient.py:
     - setup cachedir to avoid unneeded wadl downloading
+  * softwarecenter/utils.py:
+    - fix crash if desktop_file_path does not contain "applications"
+      (LP: #641071)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 22 Sep 2010 18:03:24 +0200
 
